--- a/mushu/examples/caustics.html
+++ b/mushu/examples/caustics.html
@@ -8,7 +8,7 @@
 <body>
 <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
 <script type="module">
-import { yo, shader, fps } from '../src/index.js';
+import { yo, shader, fps } from '../src/core/yo.js';
 
 // ═══════════════════════════════════════════════════════════════════════════
 // Underwater Caustics
