--- a/mushu/examples/water.html
+++ b/mushu/examples/water.html
@@ -8,7 +8,7 @@
 <body>
 <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
 <script type="module">
-import { yo, simulation, fps } from '../src/index.js';
+import { yo, simulation, fps } from '../src/core/yo.js';
 
 // ═══════════════════════════════════════════════════════════════════════════
 // Pure Water Ripple Simulation
