--- a/mushu/examples/index.html
+++ b/mushu/examples/index.html
@@ -201,7 +201,8 @@
   <div class="compare-section">
     <h2>🔬 Side-by-Side Comparison</h2>
     <p>Compare all 5 methods running the same effect simultaneously</p>
-    <a href="compare.html">Launch Comparison Tool →</a>
+    <a href="visual-compare.html">Launch Visual Comparison →</a>
+    <a href="compare.html" style="background: linear-gradient(135deg, #666, #888); margin-left: 12px;">Code Comparison →</a>
   </div>
 
   <!-- BOILERPLATE SECTION -->
@@ -342,25 +343,25 @@
         <span class="tag yogpu">YO-GPU</span>
         <h3>🔥 Fire</h3>
         <p>WebGPU fluent API with compute shader fire physics.</p>
-        <a href="yo-gpu-fire.html">Launch Demo →</a>
+        <a href="yogpu-fire.html">Launch Demo →</a>
       </div>
       <div class="card yogpu">
         <span class="tag yogpu">YO-GPU</span>
         <h3>💨 Smoke</h3>
         <p>Fluent WebGPU smoke with ping-pong compute textures.</p>
-        <a href="yo-gpu-smoke.html">Launch Demo →</a>
+        <a href="yogpu-smoke.html">Launch Demo →</a>
       </div>
       <div class="card yogpu">
         <span class="tag yogpu">YO-GPU</span>
         <h3>🌊 Water</h3>
         <p>Chainable WebGPU water with real-time wave simulation.</p>
-        <a href="yo-gpu-water.html">Launch Demo →</a>
+        <a href="yogpu-water.html">Launch Demo →</a>
       </div>
       <div class="card yogpu">
         <span class="tag yogpu">YO-GPU</span>
         <h3>🌈 Plasma</h3>
         <p>Fluent WebGPU plasma with compute state management.</p>
-        <a href="yo-gpu-plasma.html">Launch Demo →</a>
+        <a href="yogpu-plasma.html">Launch Demo →</a>
       </div>
     </div>
   </div>
