--- a/fire.html
+++ b/fire.html
@@ -39,7 +39,7 @@ const glsl = (() => {
     mouse[2] = mouse[0];
     mouse[3] = mouse[1];
     mouse[0] = e.clientX / innerWidth;
-    mouse[1] = 1 - e.clientY / innerHeight;
+    mouse[1] = e.clientY / innerHeight;
   });
   addEventListener('mousedown', () => mouseDown = true);
   addEventListener('mouseup', () => mouseDown = false);
@@ -194,7 +194,7 @@ const simShader = `
     smoke *= 0.99;
     
     // Mouse ignition
-    vec2 mousePos = mouse.xy;
+    vec2 mousePos = vec2(mouse.x, 1.0 - mouse.y);  // Flip Y to match GL coords
     float d = length(uv - mousePos);
     if (mouseDown > 0.5 && d < 0.08) {
       float intensity = (1.0 - d / 0.08) * 8.0;
