--- a/mushu/examples/gpu-water.html
+++ b/mushu/examples/gpu-water.html
@@ -99,9 +99,8 @@ gpu(
       // Mouse Interaction
       // ─────────────────────────────────────────────────────────────────
       
-      let mousePos = vec2<f32>(u.mouseX, u.mouseY);
-      let screenUV = vec2<f32>(uv.x, 1.0 - uv.y);
-      let d = length(screenUV - mousePos);
+      let mousePos = vec2<f32>(u.mouseX, 1.0 - u.mouseY);
+      let d = length(uv - mousePos);
       
       if (u.mouseDown > 0.5 && d < 0.06) {
         let falloff = pow(1.0 - d / 0.06, 2.0);
