--- a/webgpu-fire.html
+++ b/webgpu-fire.html
@@ -52,7 +52,7 @@ const gpu = async (computeCode, renderCode) => {
     mouse[2] = mouse[0];
     mouse[3] = mouse[1];
     mouse[0] = e.clientX / innerWidth;
-    mouse[1] = 1 - e.clientY / innerHeight;
+    mouse[1] = e.clientY / innerHeight;
   });
   addEventListener('mousedown', () => mouseDown = true);
   addEventListener('mouseup', () => mouseDown = false);
