--- a/mushu/examples/gpu-water.html
+++ b/mushu/examples/gpu-water.html
@@ -99,7 +99,7 @@ gpu(
       // Mouse Interaction
       // ─────────────────────────────────────────────────────────────────
       
-      let mousePos = vec2<f32>(u.mouseX, 1.0 - u.mouseY);
+      let mousePos = vec2<f32>(u.mouseX, u.mouseY);
       let d = length(uv - mousePos);
       
       if (u.mouseDown > 0.5 && d < 0.06) {
