--- a/mushu/examples/gpu-smoke.html
+++ b/mushu/examples/gpu-smoke.html
@@ -156,7 +156,7 @@ gpu(
       // Mouse Emission
       // ─────────────────────────────────────────────────────────────────
       
-      let mousePos = vec2<f32>(u.mouseX, 1.0 - u.mouseY);
+      let mousePos = vec2<f32>(u.mouseX, u.mouseY);
       let d = length(uv - mousePos);
       
       if (u.mouseDown > 0.5 && d < 0.1) {
