--- a/examples/index.html
+++ b/examples/index.html
@@ -91,7 +91,7 @@
     }
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+      grid-template-columns: repeat(4, 1fr);
       gap: 24px;
     }
     .card {
@@ -263,12 +263,6 @@
         <h3>🌈 Plasma</h3>
         <p>Classic plasma effect with rainbow colors using glsl().</p>
         <a href="plasma.html">Launch Demo →</a>
-      </div>
-      <div class="card glsl">
-        <span class="tag glsl">glsl()</span>
-        <h3>✨ Caustics</h3>
-        <p>Underwater light caustics using the glsl() helper.</p>
-        <a href="caustics.html">Launch Demo →</a>
       </div>
     </div>
   </div>
