--- a/examples/yo-plasma.html
+++ b/examples/yo-plasma.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>mushu — YO Plasma Demo</title>
+  <title>mushu — Flow Plasma Demo</title>
   <style>
     * { margin: 0; padding: 0; }
     body { background: #000; overflow: hidden; }
@@ -12,10 +12,10 @@
   </style>
 </head>
 <body>
-<div class="info">⚡ <code>yo().use(shader()).use(fps()).go()</code> Plasma | Move mouse to interact</div>
+<div class="info">⚡ <code>mushu().flow().use(shader()).use(fps()).go()</code> Plasma | Move mouse to interact</div>
 <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
 <script type="module">
-import { yo, shader, fps } from '../src/core/yo.js';
+import { mushu, shader, fps } from '../src/index.js';
 
 // ═══════════════════════════════════════════════════════════════════════════
 // YO Advanced Plasma Effect (WebGL2)
@@ -31,7 +31,7 @@ import { yo, shader, fps } from '../src/core/yo.js';
 // Move mouse to influence the plasma! Click for energy burst!
 // ═══════════════════════════════════════════════════════════════════════════
 
-yo(document.getElementById('c'))
+mushu('#c').flow()
   .use(shader(`
     // ─────────────────────────────────────────────────────────────────────
     // Noise Functions
@@ -221,7 +221,7 @@ yo(document.getElementById('c'))
   .use(fps())
   .go();
 
-console.log('%c 🌈 mushu YO Plasma Ready ', 'background: linear-gradient(90deg, #ff00ff, #00ffff, #ff00ff); color: white; padding: 8px 16px; border-radius: 4px; font-weight: bold;');
+console.log('%c 🌈 mushu Flow Plasma Ready ', 'background: linear-gradient(90deg, #ff00ff, #00ffff, #ff00ff); color: white; padding: 8px 16px; border-radius: 4px; font-weight: bold;');
 console.log('Move mouse to influence plasma. Click for energy burst!');
 </script>
 </body>
