--- a/examples/fire.html
+++ b/examples/fire.html
@@ -12,17 +12,17 @@
   </style>
 </head>
 <body>
-<div class="info">🎨 <code>glsl()</code> Fire | Move mouse to interact</div>
+<div class="info">🎨 <code>mushu().glsl()</code> Fire | Move mouse to interact</div>
 <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
 <script type="module">
-import { glsl } from '../src/core/yo.js';
+import { mushu } from '../src/index.js';
 
 // ═══════════════════════════════════════════════════════════════════════════
 // GLSL Helper - Simple One-Liner Fire Effect
-// This uses the glsl() helper for non-simulation effects
+// This uses the mushu().glsl() helper for non-simulation effects
 // ═══════════════════════════════════════════════════════════════════════════
 
-glsl(`
+mushu('#c').glsl(`
   // Noise functions for realistic fire
   float hash(vec2 p) {
     vec3 p3 = fract(vec3(p.xyx) * 0.1031);
@@ -114,7 +114,7 @@ glsl(`
     
     O = vec4(color, 1.0);
   }
-`, document.getElementById('c'));
+`);
 
 // FPS Counter
 (function() {
@@ -134,8 +134,8 @@ glsl(`
   updateFPS();
 })();
 
-console.log('%c 🔥 glsl() Fire ', 'background: linear-gradient(90deg, #ff6b9d, #ff8fab); color: white; padding: 8px 16px; border-radius: 4px; font-weight: bold;');
-console.log('Simple shader-only fire effect using the glsl() one-liner helper');
+console.log('%c 🔥 mushu().glsl() Fire ', 'background: linear-gradient(90deg, #ff6b9d, #ff8fab); color: white; padding: 8px 16px; border-radius: 4px; font-weight: bold;');
+console.log('Simple shader-only fire effect using the mushu().glsl() one-liner helper');
 </script>
 </body>
 </html>
