--- a/examples/plasma.html
+++ b/examples/plasma.html
@@ -12,16 +12,16 @@
   </style>
 </head>
 <body>
-<div class="info">🎨 <code>glsl()</code> Plasma | Move mouse to interact</div>
+<div class="info">🎨 <code>mushu().glsl()</code> Plasma | Move mouse to interact</div>
 <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
 <script type="module">
-import { glsl } from '../src/core/yo.js';
+import { mushu } from '../src/index.js';
 
 // ═══════════════════════════════════════════════════════════════════════════
 // GLSL Helper - Classic Plasma Effect with Enhanced Visuals
 // ═══════════════════════════════════════════════════════════════════════════
 
-glsl(`
+mushu('#c').glsl(`
   // Better color palette function
   vec3 palette(float t, vec3 a, vec3 b, vec3 c, vec3 d) {
     return a + b * cos(6.28318 * (c * t + d));
@@ -110,7 +110,7 @@ glsl(`
     
     O = vec4(color, 1.0);
   }
-`, document.getElementById('c'));
+`);
 
 // FPS Counter
 (function() {
