--- a/examples/smoke.html
+++ b/examples/smoke.html
@@ -12,16 +12,16 @@
   </style>
 </head>
 <body>
-<div class="info">🎨 <code>glsl()</code> Smoke | Move mouse to interact</div>
+<div class="info">🎨 <code>mushu().glsl()</code> Smoke | Move mouse to interact</div>
 <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
 <script type="module">
-import { glsl } from '../src/core/yo.js';
+import { mushu } from '../src/index.js';
 
 // ═══════════════════════════════════════════════════════════════════════════
 // GLSL Helper - Simple Shader-Only Volumetric Smoke
 // ═══════════════════════════════════════════════════════════════════════════
 
-glsl(`
+mushu('#c').glsl(`
   float hash(vec2 p) {
     vec3 p3 = fract(vec3(p.xyx) * 0.1031);
     p3 += dot(p3, p3.yzx + 33.33);
@@ -134,7 +134,7 @@ glsl(`
     
     O = vec4(color, 1.0);
   }
-`, document.getElementById('c'));
+`);
 
 // FPS Counter
 (function() {
