--- a/examples/water.html
+++ b/examples/water.html
@@ -12,16 +12,16 @@
   </style>
 </head>
 <body>
-<div class="info">🎨 <code>glsl()</code> Water | Move mouse to interact</div>
+<div class="info">🎨 <code>mushu().glsl()</code> Water | Move mouse to interact</div>
 <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
 <script type="module">
-import { glsl } from '../src/core/yo.js';
+import { mushu } from '../src/index.js';
 
 // ═══════════════════════════════════════════════════════════════════════════
 // GLSL Helper - Simple Shader-Only Ocean Water Effect
 // ═══════════════════════════════════════════════════════════════════════════
 
-glsl(`
+mushu('#c').glsl(`
   float hash(vec2 p) {
     return fract(sin(dot(p, vec2(127.1, 311.7))) * 43758.5453);
   }
@@ -151,7 +151,7 @@ glsl(`
     
     O = vec4(color, 1.0);
   }
-`, document.getElementById('c'));
+`);
 
 // FPS Counter
 (function() {
