--- a/examples/yo-fire.html
+++ b/examples/yo-fire.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>mushu — YO Fire Demo</title>
+  <title>mushu — Flow Fire Demo</title>
   <style>
     * { margin: 0; padding: 0; }
     body { background: #000; overflow: hidden; }
@@ -12,13 +12,13 @@
   </style>
 </head>
 <body>
-<div class="info">🔥 <code>yo().use(shader()).use(fps()).go()</code> Fire | Move mouse to interact</div>
+<div class="info">🔥 <code>mushu().flow().use(shader()).use(fps()).go()</code> Fire | Move mouse to interact</div>
 <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
 <script type="module">
-import { yo, shader, fps } from '../src/core/yo.js';
+import { mushu, shader, fps } from '../src/index.js';
 
 // ═══════════════════════════════════════════════════════════════════════════
-// YO Fire - Procedural Flames (WebGL2)
+// mushu Flow Fire - Procedural Flames (WebGL2)
 // 
 // Features:
 //   • Multi-octave FBM noise for realistic flames
@@ -30,7 +30,7 @@ import { yo, shader, fps } from '../src/core/yo.js';
 // Move mouse to intensify flames!
 // ═══════════════════════════════════════════════════════════════════════════
 
-yo(document.getElementById('c'))
+mushu('#c').flow()
   .use(shader(`
     // ─────────────────────────────────────────────────────────────────────
     // Noise Functions
@@ -148,7 +148,7 @@ yo(document.getElementById('c'))
   .use(fps())
   .go();
 
-console.log('%c 🔥 mushu YO Fire Ready ', 'background: linear-gradient(90deg, #ff4500, #ff8c00); color: white; padding: 8px 16px; border-radius: 4px; font-weight: bold;');
+console.log('%c 🔥 mushu Flow Fire Ready ', 'background: linear-gradient(90deg, #ff4500, #ff8c00); color: white; padding: 8px 16px; border-radius: 4px; font-weight: bold;');
 console.log('Move mouse to intensify flames!');
 </script>
 </body>
