--- a/examples/gpu-fire.html
+++ b/examples/gpu-fire.html
@@ -12,10 +12,10 @@
   </style>
 </head>
 <body>
-<div class="info">🔥 <code>gpu(compute, render)</code> Candle Flame | Move mouse to position flame</div>
+<div class="info">🔥 <code>mushu().gpu(compute, render)</code> Candle Flame | Move mouse to position flame</div>
 <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
 <script type="module">
-import { gpu } from '../src/gpu/yoGPU.js';
+import { mushu } from '../src/index.js';
 
 // ═══════════════════════════════════════════════════════════════════════════
 // WebGPU Candle Flame - Interactive flame that follows mouse
@@ -28,7 +28,7 @@ import { gpu } from '../src/gpu/yoGPU.js';
 //   • Glowing ember at base
 // ═══════════════════════════════════════════════════════════════════════════
 
-gpu(
+mushu('#c').gpu(
   null,
   /* wgsl */`
     fn hash(p: vec2<f32>) -> f32 {
