--- a/examples/gpu-plasma.html
+++ b/examples/gpu-plasma.html
@@ -12,10 +12,10 @@
   </style>
 </head>
 <body>
-<div class="info">⚡ <code>gpu(compute, render)</code> Plasma | WebGPU Function API</div>
+<div class="info">⚡ <code>mushu().gpu(compute, render)</code> Plasma | WebGPU Function API</div>
 <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
 <script type="module">
-import { gpu } from '../src/gpu/yoGPU.js';
+import { mushu } from '../src/index.js';
 
 // ═══════════════════════════════════════════════════════════════════════════
 // WebGPU Advanced Plasma Effect
@@ -31,7 +31,7 @@ import { gpu } from '../src/gpu/yoGPU.js';
 // Move mouse to influence the plasma! Click for energy burst!
 // ═══════════════════════════════════════════════════════════════════════════
 
-gpu(
+mushu('#c').gpu(
   // Compute shader - Plasma state
   /* wgsl */`
     fn hash(p: vec2<f32>) -> f32 {
