--- a/examples/gpu-smoke.html
+++ b/examples/gpu-smoke.html
@@ -12,10 +12,10 @@
   </style>
 </head>
 <body>
-<div class="info">💨 <code>gpu(compute, render)</code> Match Smoke | Move mouse - smoke trails from cursor</div>
+<div class="info">💨 <code>mushu().gpu(compute, render)</code> Match Smoke | Move mouse - smoke trails from cursor</div>
 <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
 <script type="module">
-import { gpu } from '../src/gpu/yoGPU.js';
+import { mushu } from '../src/index.js';
 
 // ═══════════════════════════════════════════════════════════════════════════
 // WebGPU Match Smoke - Smoke emits from mouse cursor like a match
@@ -28,7 +28,7 @@ import { gpu } from '../src/gpu/yoGPU.js';
 //   • Smoke trail follows mouse movement
 // ═══════════════════════════════════════════════════════════════════════════
 
-gpu(
+mushu('#c').gpu(
   null,
   /* wgsl */`
     fn hash(p: vec2<f32>) -> f32 {
