--- a/examples/yo-fire.html
+++ b/examples/yo-fire.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-<div class="info">🔥 <code>mushu().flow().use(shader()).use(fps()).go()</code> Fire | Move mouse to interact</div>
+<div class="info">🔥 <code>mushu().flow()</code> Fire | Move mouse to interact</div>
 <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
 <script type="module">
 import { mushu, shader, fps } from '../src/index.js';
